[metadata]
name = romsviz
version = attr: romsviz.__version__
description = Visualization software for ROMS modelling data
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no

[options]
packages =
    romsviz
install_requires =
    pytest
    numpy
    xarray
    holoviews
python_requires = >=3.7

[options.package_data]
* = *.yaml, *.csv
